--- a/ok/index.html
+++ b/ok/index.html
@@ -506,10 +506,9 @@ async function start() {
 	
 	//await create  m3u8.json from epg.xml & playlist.m3u8
 	await GetM3u8({
-		//url_EPG: 'http://epg.one/epg.xml?ds=a', 
-		url_EPG: 'http://192.168.1.64/epg.xml?ds=aa', 
-		//url_M3u8: 'http://9c632121bc14.mylistbest.net/playlists/uplist/58e1ab248be67d72f2f49cff9bc46a78/playlist.m3u8', 
-		url_M3u8: 'http://192.168.1.64/playlist.m3u8', 
+		url_EPG: 'http://epg.one/epg.xml?ds=a', 
+		//url_EPG: 'http://192.168.1.64/epg.xml?ds=aa', 		
+		url_M3u8: 'https://memeee.github.io/Page/ok/playlist.m3u8', 
 		//cors_anywhere: 'aasds/'
 	});
 	console.log('object m3u8 created');
